support default parameter, silence reflective warnings