@@ -27,12 +27,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.5</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-cli</groupId>
-            <artifactId>commons-cli</artifactId>
-            <version>1.4</version>
+            <version>2.4.21</version>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
@@ -92,6 +87,8 @@
                             <id>syntrax</id>
                         </program>
                     </programs>
+                    <!--silence reflective access warnings for Java 11-->
+                    <extraJvmArguments>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</extraJvmArguments>
                     <repositoryName>lib</repositoryName>
                     <repositoryLayout>flat</repositoryLayout>
                 </configuration>
